[gd_scene load_steps=14 format=3 uid="uid://g4vp8gmufhge"]

[ext_resource type="Texture2D" uid="uid://dlfmu0bfaie5q" path="res://assets/sprites/ui/title-menu-graphi.png" id="1_tlvoo"]
[ext_resource type="Texture2D" uid="uid://pvjrij75vg38" path="res://assets/sprites/gameboard/mini_school.png" id="2_nfn6l"]
[ext_resource type="Script" path="res://scripts/controllers/location-token.gd" id="3_21pb1"]
[ext_resource type="Texture2D" uid="uid://djv5uwy6lsn1m" path="res://assets/sprites/gameboard/mini_gym.png" id="4_3rnaj"]
[ext_resource type="Texture2D" uid="uid://dkcrw6qs78wq4" path="res://assets/sprites/gameboard/mini_hospital.png" id="5_phkn5"]
[ext_resource type="FontFile" uid="uid://cfu074rula0ps" path="res://resources/fonts/pixel_font_2.ttf" id="6_uh1xt"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gwq4f"]
bg_color = Color(0.1131, 0.24232, 0.39, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0bcdg"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3k3vl"]
bg_color = Color(0.301, 0.4872, 0.7, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="LabelSettings" id="LabelSettings_ta747"]
font = ExtResource("6_uh1xt")
font_size = 30

[sub_resource type="StyleBoxLine" id="StyleBoxLine_iygbu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3g8g5"]
bg_color = Color(0.7254, 0.75088, 0.78, 0.243137)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="LabelSettings" id="LabelSettings_bouvh"]
font = ExtResource("6_uh1xt")
font_color = Color(0.61339, 0.61339, 0.61339, 1)

[node name="LocationPicker" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BackGround" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.015, 0.08925, 0.15, 1)

[node name="Title-menu-graphi" type="TextureRect" parent="BackGround"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -184.0
offset_top = -164.0
offset_right = 180.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.5, 1.5)
pivot_offset = Vector2(180, 180)
texture = ExtResource("1_tlvoo")
stretch_mode = 5

[node name="SchoolIcon" type="TextureRect" parent="BackGround" node_paths=PackedStringArray("description_container")]
layout_mode = 0
offset_left = 608.0
offset_top = 168.0
offset_right = 648.0
offset_bottom = 208.0
scale = Vector2(1.25, 1.25)
texture = ExtResource("2_nfn6l")
stretch_mode = 5
script = ExtResource("3_21pb1")
description_container = NodePath("../SchoolBox")

[node name="GymIcon" type="TextureRect" parent="BackGround" node_paths=PackedStringArray("description_container")]
layout_mode = 0
offset_left = 422.0
offset_top = 212.0
offset_right = 462.0
offset_bottom = 252.0
scale = Vector2(1.25, 1.25)
texture = ExtResource("4_3rnaj")
stretch_mode = 5
script = ExtResource("3_21pb1")
enabled = false
description_container = NodePath("../GymBox")

[node name="HospitalIcon" type="TextureRect" parent="BackGround" node_paths=PackedStringArray("description_container")]
layout_mode = 0
offset_left = 560.0
offset_top = 257.0
offset_right = 600.0
offset_bottom = 297.0
scale = Vector2(1.25, 1.25)
texture = ExtResource("5_phkn5")
stretch_mode = 5
script = ExtResource("3_21pb1")
enabled = false
description_container = NodePath("../HospitalBox")

[node name="SchoolBox" type="PanelContainer" parent="BackGround"]
visible = false
layout_mode = 0
offset_left = 836.0
offset_top = 49.0
offset_right = 1104.0
offset_bottom = 198.0

[node name="Panel" type="Panel" parent="BackGround/SchoolBox"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_gwq4f")

[node name="MarginContainer" type="MarginContainer" parent="BackGround/SchoolBox/Panel"]
layout_mode = 0
offset_right = 267.0
offset_bottom = 150.0
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="VBoxContainer" type="VBoxContainer" parent="BackGround/SchoolBox/Panel/MarginContainer"]
layout_mode = 2

[node name="TitleTag" type="MarginContainer" parent="BackGround/SchoolBox/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 70
theme_override_constants/margin_bottom = 4

[node name="PanelContainer" type="PanelContainer" parent="BackGround/SchoolBox/Panel/MarginContainer/VBoxContainer/TitleTag"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_0bcdg")

[node name="Panel" type="Panel" parent="BackGround/SchoolBox/Panel/MarginContainer/VBoxContainer/TitleTag/PanelContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_3k3vl")

[node name="MarginContainer" type="MarginContainer" parent="BackGround/SchoolBox/Panel/MarginContainer/VBoxContainer/TitleTag/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="Label" type="Label" parent="BackGround/SchoolBox/Panel/MarginContainer/VBoxContainer/TitleTag/PanelContainer/MarginContainer"]
z_index = 1
layout_mode = 2
text = "School"
label_settings = SubResource("LabelSettings_ta747")
horizontal_alignment = 1

[node name="Separator" type="Panel" parent="BackGround/SchoolBox/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxLine_iygbu")

[node name="Description" type="MarginContainer" parent="BackGround/SchoolBox/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 65
theme_override_constants/margin_bottom = 6

[node name="PanelContainer" type="PanelContainer" parent="BackGround/SchoolBox/Panel/MarginContainer/VBoxContainer/Description"]
layout_mode = 2

[node name="Panel" type="Panel" parent="BackGround/SchoolBox/Panel/MarginContainer/VBoxContainer/Description/PanelContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_3g8g5")

[node name="MarginContainer" type="MarginContainer" parent="BackGround/SchoolBox/Panel/MarginContainer/VBoxContainer/Description/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="Label" type="Label" parent="BackGround/SchoolBox/Panel/MarginContainer/VBoxContainer/Description/PanelContainer/MarginContainer"]
layout_mode = 2
text = "(Easy) Full of kids that 
don't know how to wash their
hands and cover their mouths
when they cough."
label_settings = SubResource("LabelSettings_bouvh")

[node name="Line2D" type="Line2D" parent="BackGround/SchoolBox"]
position = Vector2(207, 1)

[node name="HospitalBox" type="PanelContainer" parent="BackGround"]
visible = false
layout_mode = 2
offset_left = 841.0
offset_top = 461.0
offset_right = 1101.0
offset_bottom = 626.0

[node name="Panel" type="Panel" parent="BackGround/HospitalBox"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_gwq4f")

[node name="MarginContainer" type="MarginContainer" parent="BackGround/HospitalBox/Panel"]
layout_mode = 0
offset_right = 203.0
offset_bottom = 57.0
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="VBoxContainer" type="VBoxContainer" parent="BackGround/HospitalBox/Panel/MarginContainer"]
layout_mode = 2

[node name="TitleTag" type="MarginContainer" parent="BackGround/HospitalBox/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 70
theme_override_constants/margin_bottom = 4

[node name="PanelContainer" type="PanelContainer" parent="BackGround/HospitalBox/Panel/MarginContainer/VBoxContainer/TitleTag"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_0bcdg")

[node name="Panel" type="Panel" parent="BackGround/HospitalBox/Panel/MarginContainer/VBoxContainer/TitleTag/PanelContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_3k3vl")

[node name="MarginContainer" type="MarginContainer" parent="BackGround/HospitalBox/Panel/MarginContainer/VBoxContainer/TitleTag/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="Label" type="Label" parent="BackGround/HospitalBox/Panel/MarginContainer/VBoxContainer/TitleTag/PanelContainer/MarginContainer"]
z_index = 1
layout_mode = 2
text = "Hospital
 (Locked)"
label_settings = SubResource("LabelSettings_ta747")
horizontal_alignment = 1

[node name="Separator" type="Panel" parent="BackGround/HospitalBox/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxLine_iygbu")

[node name="Description" type="MarginContainer" parent="BackGround/HospitalBox/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 65
theme_override_constants/margin_bottom = 6

[node name="PanelContainer" type="PanelContainer" parent="BackGround/HospitalBox/Panel/MarginContainer/VBoxContainer/Description"]
layout_mode = 2

[node name="Panel" type="Panel" parent="BackGround/HospitalBox/Panel/MarginContainer/VBoxContainer/Description/PanelContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_3g8g5")

[node name="MarginContainer" type="MarginContainer" parent="BackGround/HospitalBox/Panel/MarginContainer/VBoxContainer/Description/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="Label" type="Label" parent="BackGround/HospitalBox/Panel/MarginContainer/VBoxContainer/Description/PanelContainer/MarginContainer"]
layout_mode = 2
text = "(Hard) Trained profesionals
well equiped to fight back
against your pesky germs."
label_settings = SubResource("LabelSettings_bouvh")

[node name="Line2D" type="Line2D" parent="BackGround/HospitalBox"]
position = Vector2(207, 1)

[node name="GymBox" type="PanelContainer" parent="BackGround"]
visible = false
layout_mode = 0
offset_left = 27.0
offset_top = 111.0
offset_right = 295.0
offset_bottom = 291.0

[node name="Panel" type="Panel" parent="BackGround/GymBox"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_gwq4f")

[node name="MarginContainer" type="MarginContainer" parent="BackGround/GymBox/Panel"]
layout_mode = 0
offset_right = 267.0
offset_bottom = 150.0
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="VBoxContainer" type="VBoxContainer" parent="BackGround/GymBox/Panel/MarginContainer"]
layout_mode = 2

[node name="TitleTag" type="MarginContainer" parent="BackGround/GymBox/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 70
theme_override_constants/margin_bottom = 4

[node name="PanelContainer" type="PanelContainer" parent="BackGround/GymBox/Panel/MarginContainer/VBoxContainer/TitleTag"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_0bcdg")

[node name="Panel" type="Panel" parent="BackGround/GymBox/Panel/MarginContainer/VBoxContainer/TitleTag/PanelContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_3k3vl")

[node name="MarginContainer" type="MarginContainer" parent="BackGround/GymBox/Panel/MarginContainer/VBoxContainer/TitleTag/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="Label" type="Label" parent="BackGround/GymBox/Panel/MarginContainer/VBoxContainer/TitleTag/PanelContainer/MarginContainer"]
z_index = 1
layout_mode = 2
text = "Gym
(Locked)"
label_settings = SubResource("LabelSettings_ta747")
horizontal_alignment = 1

[node name="Separator" type="Panel" parent="BackGround/GymBox/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxLine_iygbu")

[node name="Description" type="MarginContainer" parent="BackGround/GymBox/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 65
theme_override_constants/margin_bottom = 6

[node name="PanelContainer" type="PanelContainer" parent="BackGround/GymBox/Panel/MarginContainer/VBoxContainer/Description"]
layout_mode = 2

[node name="Panel" type="Panel" parent="BackGround/GymBox/Panel/MarginContainer/VBoxContainer/Description/PanelContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_3g8g5")

[node name="MarginContainer" type="MarginContainer" parent="BackGround/GymBox/Panel/MarginContainer/VBoxContainer/Description/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="Label" type="Label" parent="BackGround/GymBox/Panel/MarginContainer/VBoxContainer/Description/PanelContainer/MarginContainer"]
layout_mode = 2
text = "(Medium) Adults that care 
about health but still sweat
and shower in public places."
label_settings = SubResource("LabelSettings_bouvh")

[node name="Line2D" type="Line2D" parent="BackGround/GymBox"]
position = Vector2(207, 1)

[node name="SFXPlayer" type="AudioStreamPlayer2D" parent="."]

[connection signal="gui_input" from="BackGround/SchoolIcon" to="BackGround/SchoolIcon" method="_on_gui_input"]
[connection signal="mouse_entered" from="BackGround/SchoolIcon" to="BackGround/SchoolIcon" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="BackGround/SchoolIcon" to="BackGround/SchoolIcon" method="_on_mouse_exited"]
[connection signal="gui_input" from="BackGround/GymIcon" to="BackGround/GymIcon" method="_on_gui_input"]
[connection signal="mouse_entered" from="BackGround/GymIcon" to="BackGround/GymIcon" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="BackGround/GymIcon" to="BackGround/GymIcon" method="_on_mouse_exited"]
[connection signal="gui_input" from="BackGround/HospitalIcon" to="BackGround/HospitalIcon" method="_on_gui_input"]
[connection signal="mouse_entered" from="BackGround/HospitalIcon" to="BackGround/HospitalIcon" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="BackGround/HospitalIcon" to="BackGround/HospitalIcon" method="_on_mouse_exited"]
